--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "bootstrap-icons": "^1.13.1",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-redux": "^9.2.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
+    "@types/react-redux": "^7.1.34",
     "babel-plugin-react-compiler": "1.0.0",
     "typescript": "5.9.3"
   }
